--- a/task-4.html
+++ b/task-4.html
@@ -7,6 +7,25 @@
     <title>Task 4</title>
     <link rel="stylesheet" href="./css/common.css"/>
   </head>
+
+  <style>
+#submit-form {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+line-height: 24px;
+  width: 86px;
+  height: 40px;
+  padding: 8px 16px;
+  gap: 8px;
+  border-radius: 8px;
+  background: #4E75FF;
+  margin-top: 8px;
+  cursor: pointer;
+  color:#FFFFFF;
+  }
+  </style>
+
   <body>
     <p><a href="./index.html">Go back</a></p>
 
@@ -19,7 +38,7 @@
         Password
         <input type="password" name="password"/>
       </label>
-      <button type="submit" class="submit-form">Login</button>
+      <button type="submit" id="submit-form">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
