--- a/task-6.html
+++ b/task-6.html
@@ -12,8 +12,8 @@
 
     <div id="controls">
       <input type="number" min="1" max="100" step="1" class="number-input"/>
-      <button type="button" data-create>Create</button>
-      <button type="button" data-destroy>Destroy</button>
+      <button type="button" class="button-create" data-create>Create</button>
+      <button type="button" class="button-destroy" data-destroy>Destroy</button>
     </div>
 
     <div id="boxes"></div>
