--- a/task-2.html
+++ b/task-2.html
@@ -8,6 +8,20 @@
 
     <link rel="stylesheet" href="./css/common.css"/>
   </head>
+  <style>
+    .gallery {
+      max-width: 1128px;
+      max-height: 300px;
+  display: flex;
+  flex-wrap: wrap; /* Дозволяє елементам переноситися на новий рядок */
+  justify-content: space-around; /* Вирівнювання елементів по горизонталі */
+  align-items: center; 
+  gap: 24px; /* Проміжок між елементами */
+  list-style-type: none; /* Видалити маркери списку */
+  padding: 0;
+  margin: 0;
+}
+  </style>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
