--- a/task-2.html
+++ b/task-2.html
@@ -31,6 +31,8 @@
      max-width: 100%;
      max-height: 100%;
      object-fit: cover; /* Збереження пропорцій зображення */
+     width:360px;
+     height:300px;
    }
      </style>
      
